Add link interative.py

--- a/interative.html
+++ b/interative.html
@@ -6,9 +6,9 @@
 <link rel="stylesheet" type="text/css" href="css/w3.css">
 <link rel="stylesheet" href="css/single.css">
 <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
-<script type="text/javascript" src="js/brython.js"></script>
-
-<script type="text/javascript" src="js/brython_stdlib.js"></script>
+<script type="text/javascript" src="brython.js"></script>
+<script type="text/javascript" src="brython_stdlib.js"></script>
+<script type="text/python" src="py/interative.py"></script>
 <body onload="brython()">
 
 
