--- a/table.html
+++ b/table.html
@@ -55,7 +55,10 @@
 <!-- begin container-2 part-->
 <div id="container-2" class="w3-content w3-container w3-light-grey w3-center w3-padding-32" style="max-width: 500px; display: none;">
 <br>
-<button b-on="click:update_value"   class="w3-button w3-hover-blue w3-blue" style="width: 50%">{update.upper()}</button>
+
+    <select b-on="change:update_value" class="w3-select" name="option">
+      <option b-code="for x in product:"  value="{x[0]}">{x[0].title()}</option>
+    </select>
 <p style="display: none;">{item}{price}{quantity}</p>
 
 
