update expression.html file

--- a/expression.html
+++ b/expression.html
@@ -26,14 +26,22 @@
 
 <!-- begin container-1 part -->
 <div id="container-1" class="w3-content w3-container w3-light-grey w3-center" style="max-width: 500px;display: none;">
-
-
-<h2>Country Profil</h2>
-
+<h2 id="country" >Country Profil 1</h2>
 <p class="w3-xlarge w3-text-blue">The population of {country} is {population}.</p>
 </div>
-
 <!-- end container-1 part-->
+
+
+<!-- begin container-2 part -->
+<div id="container-2" class="w3-content w3-container w3-light-grey w3-center" style="max-width: 500px;display: none;">
+<h2>Country Profil 2</h2>
+ <p class="w3-xlarge w3-text-blue">{country_name} is a {country_climate_temperature} country with {country_climate_rainfall} rainfall and a population of {country_population}.</p>
+ <p class="w3-xlarge w3-text-blue" >The capital city is {country_capital_name}(<a href='https://maps.google.co.uk/maps/place/{country_capital_name}/@{country_capital_lat},{country_capital_lon},12z' target='_blank'>see map</a>). .</p>
+</div>
+<!-- end container-2 part -->
+
+
+
 
 
 </body>
