--- a/event.html
+++ b/event.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>To do list brython</title>
+<title>Event App</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta charset="utf-8">
 <link rel="stylesheet" type="text/css" href="css/w3.css">
