--- a/color.html
+++ b/color.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="css/font-awesome.min.css">
 <link rel="stylesheet" href="css/single.css">
 <script type="text/javascript" src="brython.js"></script>
-<script type="text/javascript" src="brython_stdlib.js" ></script>
+<script type="text/javascript" src="brython_modules.js" ></script>
 <script type="text/python" src="py/color.py"></script>
 <body onload="brython()">
 
