Add brython module js link remove brython stdlib js link

--- a/event.html
+++ b/event.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
 <link rel="stylesheet" type="text/css" href="css/single.css">
 <script type="text/javascript" src="brython.js"></script>
-<script type="text/javascript" src="brython_stdlib.js"></script>
+<script type="text/javascript" src="brython_modules.js"></script>
 <script type="text/python" src="py/event.py"></script>
 <body onload="brython()">
 
