--- a/expression.html
+++ b/expression.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" type="text/css" href="css/single.css">
 <script type="text/javascript" src="brython.js"></script>
 
-<script type="text/javascript" src="brython_stdlib.js"></script>
+<script type="text/javascript" src="brython_modules.js"></script>
 <script type="text/python" src="py/expression.py"></script>
 <body onload="brython()">
 
