--- a/interative.html
+++ b/interative.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="css/single.css">
 <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
 <script type="text/javascript" src="brython.js"></script>
-<script type="text/javascript" src="brython_stdlib.js"></script>
+<script type="text/javascript" src="brython_modules.js"></script>
 <script type="text/python" src="py/interative.py"></script>
 <body onload="brython()">
 
