update  chat.html file

--- a/chat.html
+++ b/chat.html
@@ -24,6 +24,11 @@
 <div  id="container" style="display: none;">
 <h1 style="font-size: 32px;">Brython Chat App</h1>
 
+<div id="bar" class="w3-bar w3-animate-top" style="display: none;">
+  <button id="reload" class="w3-button w3-teal">Reload</button>
+  <button id="remove" class="w3-button w3-red">Remove Data</button>
+</div>
+
 
 <p class="w3-xlarge" id="welcome"></p>
 
