Add animation.html file

--- a/animation.html
+++ b/animation.html
@@ -9,7 +9,7 @@
 <script type="text/javascript" src="brython.js"></script>
 <script type="text/javascript" src="brython_stdlib.js"></script>
 <script type="text/python" src="py/animation.py"></script>
-<body onload="brython(2)">
+<body onload="brython(1)">
 
 <!-- begin loading part-->
 <div id="loading" class="w3-display-middle w3-center" style="display:none;" >
@@ -18,12 +18,12 @@
 </div>
 <!--end loading part-->
 
-<div id="container" style="display:none;">
+<div id="container">
 
 
 
-<div id="germain" data-animation="true">zerzrezrezrz</div>
-<p id="test" data-animation="true">erzerezrezrezrezrzerez</p>
+<div class="sdqsdqsd"   data-animation="zoom">zerzrezrezrz</div>
+<p  class="rtretre" data-animation="zoom">erzerezrezrezrezrzerez</p>
 
 
 
@@ -39,3 +39,5 @@
 
 
 </body>
+
+
